--- a/.github/workflows/UIdockerimage.yml
+++ b/.github/workflows/UIdockerimage.yml
@@ -4,7 +4,7 @@ on: workflow_dispatch
 
 jobs:
   BuildImage:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     env:
         ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
         ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
