--- a/.github/workflows/UIdockerimage.yml
+++ b/.github/workflows/UIdockerimage.yml
@@ -2,6 +2,11 @@ name: "Micro ToDo UI Image"
 
 on: workflow_dispatch
 
+
+permissions:
+  id-token: write
+  contents: read
+
 jobs:
   BuildImage:
     runs-on: self-hosted
