--- a/.github/workflows/UIdockerimage.yml
+++ b/.github/workflows/UIdockerimage.yml
@@ -50,6 +50,8 @@ jobs:
 
       - name: Push Docker Image to ACR
         run: |
+          TOKEN=$(az acr login -n $ACR_NAME --expose-token --output tsv --query accessToken)
+          docker login $ACR_LOGIN_SERVER --username 00000000-0000-0000-0000-000000000000 --password-stdin <<< "$TOKEN"
           sudo docker push $ACR_LOGIN_SERVER/$IMAGE_NAME:$IMAGE_TAG
 
 
