--- a/.github/workflows/UIdockerimage.yml
+++ b/.github/workflows/UIdockerimage.yml
@@ -42,17 +42,15 @@ jobs:
 
       - name: Build Docker Image
         run: |
-          sudo docker build -t $IMAGE_NAME:$IMAGE_TAG .
+          docker build -t $IMAGE_NAME:$IMAGE_TAG .
 
       - name: Tag Docker Image for ACR
         run: |
-          sudo docker tag $IMAGE_NAME:$IMAGE_TAG $ACR_LOGIN_SERVER/$IMAGE_NAME:$IMAGE_TAG
+          docker tag $IMAGE_NAME:$IMAGE_TAG $ACR_LOGIN_SERVER/$IMAGE_NAME:$IMAGE_TAG
 
       - name: Push Docker Image to ACR
         run: |
-          TOKEN=$(az acr login -n $ACR_NAME --expose-token --output tsv --query accessToken)
-          docker login $ACR_LOGIN_SERVER --username 00000000-0000-0000-0000-000000000000 --password-stdin <<< "$TOKEN"
-          sudo docker push $ACR_LOGIN_SERVER/$IMAGE_NAME:$IMAGE_TAG
+          docker push $ACR_LOGIN_SERVER/$IMAGE_NAME:$IMAGE_TAG
 
 
     
