--- a/.github/workflows/UIdockerimage.yml
+++ b/.github/workflows/UIdockerimage.yml
@@ -19,7 +19,7 @@ jobs:
         IMAGE_TAG: v1
         ACR_NAME: appsacrrrrrr
         ACR_LOGIN_SERVER: appsacrrrrrr.azurecr.io
-        TOKEN: ${{secrets.TOKEN}}
+        
 
     steps:
       - name: Checkout code
@@ -38,8 +38,8 @@ jobs:
 
       - name: Log in to ACR
         run: |
+          TOKEN=$(az acr login -n $ACR_NAME --expose-token --output tsv --query accessToken)
           docker login $ACR_LOGIN_SERVER --username 00000000-0000-0000-0000-000000000000 --password-stdin <<< "$TOKEN"
-
 
       - name: Build Docker Image
         run: |
@@ -51,8 +51,9 @@ jobs:
 
       - name: Push Docker Image to ACR
         run: |
-          
-          sudo docker push $ACR_LOGIN_SERVER/$IMAGE_NAME:$IMAGE_TAG
+          TOKEN=$(az acr login -n $ACR_NAME --expose-token --output tsv --query accessToken)
+          docker login $ACR_LOGIN_SERVER --username 00000000-0000-0000-0000-000000000000 --password-stdin <<< "$TOKEN"
+          docker push $ACR_LOGIN_SERVER/$IMAGE_NAME:$IMAGE_TAG
 
 
     
