--- a/.github/workflows/UIdockerimage.yml
+++ b/.github/workflows/UIdockerimage.yml
@@ -49,7 +49,7 @@ jobs:
             --password-stdin
 
       - name: Build Docker Image
-        run: docker build -t $IMAGE_NAME:$IMAGE_TAG .
+        run: sudo docker build -t $IMAGE_NAME:$IMAGE_TAG .
 
       - name: Tag Docker Image for ACR
         run: docker tag $IMAGE_NAME:$IMAGE_TAG $ACR_LOGIN_SERVER/$IMAGE_NAME:$IMAGE_TAG
