--- a/.github/workflows/UIdockerimage.yml
+++ b/.github/workflows/UIdockerimage.yml
@@ -36,17 +36,10 @@ jobs:
           
 
 
-      - name: Get ACR Access Token
-        id: acr-token
+      - name: Log in to ACR (Admin)
         run: |
-          TOKEN=$(az acr login -n $ACR_NAME --expose-token --output tsv --query accessToken)
-          echo "TOKEN=$TOKEN" >> $GITHUB_ENV
-
-      - name: Docker login to ACR using SP token
-        run: |
-          echo $TOKEN | docker login $ACR_LOGIN_SERVER \
-            --username 00000000-0000-0000-0000-000000000000 \
-            --password-stdin
+          echo ${{ secrets.ACR_PASSWORD }} | docker login $ACR_LOGIN_SERVER \
+            --username ${{ secrets.ACR_USERNAME }} --password-stdin
 
       - name: Build Docker Image
         run: sudo docker build -t $IMAGE_NAME:$IMAGE_TAG .
