--- a/.github/workflows/UIdockerimage.yml
+++ b/.github/workflows/UIdockerimage.yml
@@ -9,7 +9,7 @@ permissions:
 
 jobs:
   BuildImage:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     env:
         ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
         ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
