--- a/manifests/service.yaml
+++ b/manifests/service.yaml
@@ -2,8 +2,9 @@ apiVersion: v1
 kind: Service
 metadata:
   name: apps-todoui-svc
+  namespace: argocd
 spec:
-  type: ClusterIP
+  type: LoadBalancer
   selector:
     app: todo-ui
   ports:
