--- a/manifests/ingress.yaml
+++ b/manifests/ingress.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-    - host: todoui.aparnasapps.icu
+    - host: ui.aparnasapps.icu
       http:
         paths:
         -  pathType: Prefix
